--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,13 @@
     </div>
         <h1 class="section-title">Статьи</h1>
         <div class="blog-cards">
-            {% for post in posts %}
+            {% for article in articles %}
             <div class="blog-card">
                 <div class="card-header">
                     <div>
-                        <h2 class="card-title">{{ post.title }}</h2>
+                        <h2 class="card-title">{{ article.title }}</h2>
                         <div class="meta-info">
-                            {% if post.date == today %}
+                            {% if article.created_date == today %}
                                 <span class="new-post">Новое!</span>
                             {% endif %}
                             <span class="tag"></span>
@@ -27,36 +27,36 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5" />
                                 </svg>
-                                 {{ post.date | russian_date }}
+                                 {{ article.created_date | russian_date }}
                             </span>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="pattern"></div>
+                <div class="pattern"></div>
                 <div class="card-content">
                     <div class="description">
-                        {{post.text}}
+                        {{article.text}}
                     </div>
                     <div class="btn-wrapper">
-                        <button class="read-more">
+                        <a href="{{url_for('article_content', id=article.id)}}" class="read-more">
                             Читать далее
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
                             </svg>
-                        </button>
+                        </a>
                         <button class="bookmark-btn">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.593 3.322c1.1.128 1.907 1.077 1.907 2.185V21L12 17.25 4.5 21V5.507c0-1.108.806-2.057 1.907-2.185a48.507 48.507 0 0111.186 0z" />
                             </svg>
                         </button>
                     </div>
-                </div> -->
+                </div>
             </div>
             {% endfor %}
         </div>
     </div>
 
-    <!-- <script>
+    <script>
         const bookmarkBtns = document.querySelectorAll('.bookmark-btn');
         const readMoreBtns = document.querySelectorAll('.read-more');
         const blogCards = document.querySelectorAll('.blog-card');
@@ -153,6 +153,8 @@
                 }
             });
         });
-    </script> -->
+    </script>
 
 {% endblock %}
+
+
