--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,18 @@
             <li><a href="{{url_for('contact')}}" class="nav-link px-2">Контакты</a></li> 
             <li><a href="{{url_for('feedback')}}" class="nav-link px-2">Обратная связь</a></li> 
             <li><a href="{{url_for('create')}}" class="nav-link px-2">Создание статьи</a></li> 
-        <!-- <div class="col-md-3 text-end"> 
-            <button type="button" class="btn btn-outline-primary me-2">Войти</button> 
-            <button type="button" class="btn btn-primary">Зарегиcтрироваться</button> 
-        </div>  -->
+             <li><a href="{{url_for('articles')}}" class="nav-link px-2">Статьи</a></li> 
+        <div class="col-md-3 text-end"> 
+            <!-- <button type="button" class="btn btn-outline-primary me-2">Войти</button> 
+            <button type="button" class="btn btn-primary">Зарегиcтрироваться</button> -->
+            {% if not current_user.is_authenticated %}
+            <a href="{{ url_for('login') }}" class="btn btn-outline-primary me-2">Войти</a>
+            <a href="{{ url_for('register') }}" class="btn btn-primary">Зарегистрироваться</a>
+            {% else %}
+            <span class="me-3">Привет, {{ current_user.name }}!</span>
+            <a href="{{ url_for('logout') }}" class="btn btn-outline-secondary">Выйти</a>
+            {% endif %}
+        </div> 
         </header>
         <div class="content">
             {% block content %}{% endblock %}
