fix authorization and add articles/<category>

--- a/templates/edit_article.html
+++ b/templates/edit_article.html
@@ -8,9 +8,10 @@
 {% block content %} 
 <h1 class="welcome-title"> Редактирование статьи </h1>
 <form method="post">
-    <input type="text" name="title" placeholder="Введите заголовок статьи" class="form-control" required><br>
-    <textarea type="text" name="text" placeholder="Введите текст статьи" class="form-control textarea-scrollable" row="10" required></textarea><br>
-    <input type="text" name="author_name" placeholder="Введите автора статьи" class="form-control" required><br>
+    <input type="text" name="title" value="{{ article.title }}" class="form-control" required><br>
+    <textarea type="text" name="text" class="form-control textarea-scrollable" row="10" required>
+        {{ article.text }}
+    </textarea><br>
     <label>Выберите категорию</label>
     <select name="category" class="form-control" required>
         {% for key, name in categories.items() %}
