--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,11 @@
             <li><a href="{{url_for('index')}}" class="nav-link px-2 link-secondary">Главная</a></li> 
             <li><a href="{{url_for('about')}}" class="nav-link px-2">О проекте</a></li> 
             <li><a href="{{url_for('contact')}}" class="nav-link px-2">Контакты</a></li> 
-            <li><a href="{{url_for('feedback')}}" class="nav-link px-2">Обратная связь</a></li> 
-            <li><a href="{{url_for('create')}}" class="nav-link px-2">Создание статьи</a></li> 
-             <li><a href="{{url_for('articles')}}" class="nav-link px-2">Статьи</a></li> 
+            <li><a href="{{url_for('feedback')}}" class="nav-link px-2">Обратная связь</a></li>
+            <li><a href="{{url_for('articles')}}" class="nav-link px-2">Статьи</a></li>
+            {% if current_user.is_authenticated %}
+            <li><a href="{{url_for('create')}}" class="nav-link px-2">Создание статьи</a></li>
+            {% endif %}
         <div class="col-md-3 text-end"> 
             <!-- <button type="button" class="btn btn-outline-primary me-2">Войти</button> 
             <button type="button" class="btn btn-primary">Зарегиcтрироваться</button> -->
