--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
                     <div>
                         <h2 class="card-title">{{ article.title }}</h2>
                         <div class="meta-info">
-                            {% if article.created_date == today %}
+                            {% if article.is_new %}
                                 <span class="new-post">Новое!</span>
                             {% endif %}
-                            <span class="tag"></span>
+                            <span class="tag">{{ CATEGORIES.get(article.category, article.category) }}</span>
                             <span class="date">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5" />
