--- a/templates/not_user.html
+++ b/templates/not_user.html
@@ -3,7 +3,7 @@
 {% block title %}Упс...{% endblock %}
 
 {% block content %}
-<h3>Опубликовать статью могут только зарегистрированные пользователи</h3>
+<h3>Упс... Произошла ошибка</h3>
  <div class="">
         <div class="welcome-title">
             <h5>Зарегистрируйтесь, чтобы продолжить:</h5>
